# YCode

./: .gitignore  LICENSE  README.md  agent.cpp  build.bat  manage_api_key.ps1  run_ycode.bat  set_api_key_system.bat  test.cpp  update_shortcut.ps1  upgrade_agent.bat  ycode_self_update.bat
YCodeEngine/: CMakeLists.txt  README.md  build.bat
YCodeEngine/include/ycode/: canvas2d.h  core.h  engine.h  event_bus.h  input.h  physics2d.h  plugin.h  plugin_loader.h  resource_manager.h  scene.h  scene_loader.h  version.h  window.h
YCodeEngine/scenes/: sandbox.scene.json
YCodeEngine/src/: canvas2d_null.cpp  canvas2d_win32.cpp  engine.cpp  event_bus.cpp  main.cpp  physics2d.cpp  plugin_loader.cpp  resource_manager.cpp  scene.cpp  scene_loader.cpp  window_null.cpp  window_win32.cpp
YZCodex/: .gitignore  AgentManager.cpp  AgentManager.h  CMakeLists.txt  CMakePresets.json  ChatWidget.cpp  ChatWidget.h  CodeEditor.cpp  CodeEditor.h  MainWindow.cpp  MainWindow.h  README.md  SyntaxHighlighter.cpp  SyntaxHighlighter.h  YCode.rc  YCode.rc.in  build.bat  main.cpp  test_agent.bat
YZCodex/resources/: style.qss
